--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <script src="./node_modules/flowbite/dist/flowbite.js"></script>
   </body>
 </html>
